<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.axle.MainActivity">
    <item
        android:icon="@android:drawable/ic_menu_manage"
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_dialog_email"
        android:id="@+id/action_mail"
        android:orderInCategory="1"
        android:title="@string/Mail"
        app:showAsAction="always" />
    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/action_item1"
            android:orderInCategory="30"
            android:title="@string/action_item1"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_item2"
            android:orderInCategory="20"
            android:title="@string/action_item2"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/action_item3"
        android:orderInCategory="10"
        android:title="@string/action_item3"
        app:showAsAction="never" />

</menu>
